tests/parsing/smtlib/v2.6/errors/013_forall_missing_body_2.expected
File "tests/parsing/smtlib/v2.6/errors/013_forall_missing_body_2.smt2", line 2, character 26-27:
2 | (assert (forall ((x int)) !))
                              ^
Error while parsing a term, read the reserved word '!',
      but expected a term (body for the universal quantification).
